--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <div class="btn-layer"></div>
          <button type="submit" onclick="REGISTER">REGISTER</button>
         </form>
+        <h1>Corvit Systems Bahawalpur</h1>
     </div>
   </div>
 </body>
